fixed type and adjusted grid and spacing

--- a/modules/layout-cards/style.css
+++ b/modules/layout-cards/style.css
@@ -1,37 +1,32 @@
 .cards text-content {
 	color: black;
-	background-color: rgba(255,255, 255, .8);
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
+	background-color: rgba(255,255, 255, .7);
+	display: grid;
 	padding: 15px;
 	padding: 0.5rem;
-	position: absolute;
-	bottom: 0%;
-	right: 0%;
 	width: 100%;
-	height: 40%;
-	z-index: 0;
+	height: 100%;
+	min-height: 200px;
 	border-radius: 0 0  0.5rem  0.5rem;
 }
 
 .article-card text-content p{
-	color: dimgray;
+	color: rgb(57, 57, 57);
+	
 }
 
-
-.article-card h1{
-	font-size: 1.4rem;
-	font-weight: 500;
+.article-card text-content a{
+	max-width: 50px;
+	max-height: 40px;
+	align-self: end;
 }
+
 .article-card .card-button {
-	margin-top: 30px;
 	padding: 10px;
 	min-width:100px;
 	text-align: center;
-	color: black;
 	border: 1px solid black;
+	margin-top: 20px;
 	
 }
 
@@ -43,20 +38,13 @@
 .cards .article-card {
 	position: relative;
 	background-color:transparent;
-	padding: 5rem 0;
-	max-width: 400px;
 	min-height: 500px;
+	height: 100%;
 }
 
 .cards picture {
 	border-radius: 0.5rem;
-	position: absolute;
-	top: 0%;
-	left: 0%;
-	width: 100%;
-	height: 100%;
-	z-index: -10;
-	padding: 0px;
+	max-height: 400px;
 	
 }
 
